--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lodash": "^4.17.11",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "reactcss": "^1.2.3"
   }
 }
