--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "huajian",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "name": "dreamerldqui",
+  "version": "1.1.0",
+  "description": "This is created by lidanqiu",
+  "files": ["lib"],
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
