--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "dreamerldqui",
   "version": "1.1.0",
   "description": "This is created by lidanqiu",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -46,6 +48,7 @@
     "lodash": "^4.17.11",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-jss": "^8.6.1",
     "react-router-dom": "^4.3.1",
     "reactcss": "^1.2.3"
   }
