--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "style-loader": "^0.21.0",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.6.0",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.3"
